Add CLI tools, shared library, and Docker infrastructure updates
- Add scan, wizard CLI scripts with branded output
- Add lib/common.sh shared banner, colors, and help utilities
- Update bootstrap/run/setup scripts with branding and multi-PDU support
- Update Dockerfile and docker-compose for MQTT auth and multi-PDU

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # CyberPower PDU Bridge Configuration
+# See docs/configuration.md for full documentation
 
-# PDU SNMP settings
+# PDU SNMP settings (single-PDU mode — overridden by pdus.json for multi-PDU)
 PDU_HOST=192.168.20.177
 PDU_SNMP_PORT=161
 PDU_COMMUNITY_READ=public
@@ -10,11 +11,15 @@ PDU_DEVICE_ID=pdu44001
 # MQTT settings
 MQTT_BROKER=mosquitto
 MQTT_PORT=1883
+# MQTT_USERNAME=
+# MQTT_PASSWORD=
 
 # Bridge settings
 BRIDGE_POLL_INTERVAL=1.0
 BRIDGE_MOCK_MODE=false
 BRIDGE_LOG_LEVEL=INFO
+BRIDGE_SNMP_TIMEOUT=2.0
+BRIDGE_SNMP_RETRIES=1
 
 # InfluxDB settings
 INFLUXDB_URL=http://influxdb:8086
