--- a/bridge/Dockerfile
+++ b/bridge/Dockerfile
@@ -8,4 +8,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY src/ src/
 COPY static/ static/
 
+HEALTHCHECK --interval=15s --timeout=5s --retries=3 \
+    CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8080/api/health')" || exit 1
+
 CMD ["python", "-m", "src.main"]
