Auto-number PDU device IDs and publish device info to MQTT
- Remove PDU_DEVICE_ID default; auto-assign pdu-01, pdu-02, etc.
- Add next_device_id() helper for sequential numbering
- Auto-assign device_id in add-PDU wizard and runtime API
- Publish device identity (serial, model, firmware) to pdu/{id}/device
  every 30s as retained MQTT message
- Fix HA discovery to pass device_id and identity for serial-based IDs
- UI: show device ID as MQTT topic prefix, make wizard ID optional
- 939 tests passing (5 new for auto-numbering)

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ PDU_HOST=192.168.20.177
 PDU_SNMP_PORT=161
 PDU_COMMUNITY_READ=public
 PDU_COMMUNITY_WRITE=private
-PDU_DEVICE_ID=pdu44001
+# PDU_DEVICE_ID=          # Optional — auto-assigned as pdu-01, pdu-02, etc.
 
 # MQTT settings
 MQTT_BROKER=mosquitto
