Add auto-generated PDF energy reports (weekly + monthly)
- New report_generator.py with CyberPDFReport dark-themed FPDF subclass
- Weekly and monthly PDF reports with summary cards, daily/outlet charts,
  source A vs B comparison, and % change vs prior period
- Auto-scheduled: weekly on Monday, monthly on 1st, with idempotency
- On-demand generation via web UI and REST API
- Host-accessible volume mount (./reports/) for backup integration
- Inter + JetBrains Mono TTF fonts with graceful Helvetica/Courier fallback
- API: GET /api/reports, POST /api/reports/generate, GET /api/reports/download
- Reports section in web UI with type badges, download links, generate buttons
- BRIDGE_REPORTS_ENABLED and BRIDGE_REPORTS_DIR config with persistence
- Trim README screenshot gallery to 4 key images, full gallery in features.md
- Update docs: features, api-reference, configuration, architecture, multi-pdu
- Sample report screenshot in docs/screenshots/sample-report.png
- 35 new tests (991 total): PDF gen, filename parsing, path security, listing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,7 @@ services:
         condition: service_healthy
     volumes:
       - bridge-data:/data
+      - ${BRIDGE_REPORTS_PATH:-./reports}:/data/reports
       - /dev/serial:/dev/serial:ro
     device_cgroup_rules:
       - 'c 188:* rwm'
