--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,13 @@ PDU_COMMUNITY_READ=public
 PDU_COMMUNITY_WRITE=private
 # PDU_DEVICE_ID=          # Optional — auto-assigned as pdu-01, pdu-02, etc.
 
+# Serial transport (optional — leave empty to disable)
+# PDU_SERIAL_PORT=        # e.g., /dev/ttyUSB0
+# PDU_SERIAL_BAUD=9600
+# PDU_SERIAL_USERNAME=cyber
+# PDU_SERIAL_PASSWORD=cyber
+# PDU_TRANSPORT=snmp      # snmp, serial, or both
+
 # MQTT settings
 MQTT_BROKER=mosquitto
 MQTT_PORT=1883
@@ -21,20 +28,24 @@ BRIDGE_LOG_LEVEL=INFO
 BRIDGE_SNMP_TIMEOUT=2.0
 BRIDGE_SNMP_RETRIES=1
 
-# InfluxDB settings
+# Web UI
+BRIDGE_WEB_PORT=8080
+# BRIDGE_WEB_PASSWORD=    # Set to enable dashboard authentication
+# BRIDGE_WEB_USERNAME=admin
+
+# History / Reports
+HISTORY_RETENTION_DAYS=60
+HOUSE_MONTHLY_KWH=0
+# BRIDGE_REPORTS_ENABLED=true
+# BRIDGE_REPORTS_PATH=./reports  # Host directory for PDF reports
+
+# InfluxDB settings (optional)
 INFLUXDB_URL=http://influxdb:8086
 INFLUXDB_ORG=cyber-pdu
 INFLUXDB_BUCKET=pdu
 INFLUXDB_ADMIN_USER=admin
 INFLUXDB_ADMIN_PASSWORD=changeme123
 INFLUXDB_ADMIN_TOKEN=cyber-pdu-admin-token
-
-# Web UI / Automation
-BRIDGE_WEB_PORT=8080
-
-# History / Reports
-HISTORY_RETENTION_DAYS=60
-HOUSE_MONTHLY_KWH=0
 
 # Telegraf
 TELEGRAF_MQTT_BROKER=tcp://mosquitto:1883
